# DFMTuner

./: .gitmodules  LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/libs/fftw-3.3.7/: CMakeLists.txt
app/libs/fftw-3.3.7/install/arm64-v8a/lib/: libfftw3f.la  libfftw3f_threads.la
app/libs/fftw-3.3.7/install/arm64-v8a/lib/cmake/fftw3/: FFTW3fConfig.cmake
app/libs/fftw-3.3.7/install/arm64-v8a/lib/pkgconfig/: fftw3f.pc
app/libs/fftw-3.3.7/install/armeabi-v7a/lib/: libfftw3f.la  libfftw3f_threads.la
app/libs/fftw-3.3.7/install/armeabi-v7a/lib/pkgconfig/: fftw3f.pc
app/libs/fftw-3.3.7/install/x86/lib/: libfftw3f.la  libfftw3f_threads.la
app/libs/fftw-3.3.7/install/x86/lib/pkgconfig/: fftw3f.pc
app/libs/fftw-3.3.7/install/x86_64/lib/: libfftw3f.la  libfftw3f_threads.la
app/libs/fftw-3.3.7/install/x86_64/lib/pkgconfig/: fftw3f.pc
app/libs/fftw-3.3.7/kernel/: ifftw.h
app/libs/libnrsc5/faad2-prefix/src/faad2_external-stamp/: faad2_external-gitclone-lastrun.txt
app/libs/libnrsc5/src/: CMakeLists.txt  config.h  defines.h  input.c  input.h  log.c  log.h  main.c  native-lib.cpp  output.c  output.h
app/src/androidTest/java/com/github/paulyc/dfmtuner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/github/paulyc/dfmtuner/: MainActivity.java  Tuner.java  TunerActivity.java  TunerIntentService.java  TunerMediaPlayer.java  TunerMediaSource.java
app/src/main/res/layout/: activity_tuner.xml  fragment_tuner.xml
app/src/main/res/menu/: menu_main.xml  menu_tuner.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/github/paulyc/dfmtuner/: ExampleUnitTest.java
